--- a/VRChat/42/1169142.html
+++ b/VRChat/42/1169142.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "4xfY03/YEPcbUaSbL2BUjTbg/EsnUT1P3zetjLIvstY="></script>
+    "cwz2zKQqMymaZE53KyoSdqrFMBXdFaNlDbe659wr1/I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Gem pierce","description":"シンプルなピアスです\nボーンはなし\nテクスチャもありません\n金具部分にはスタンダードシェーダー\n宝石部分にはお好みのGem shaderをご利用ください\n\n改変、無償配布アバターへの使用等OKです\n禁止事項は有償利用です\n\n△816\n\n質問があればお気軽に@Orca_is_me_VRへどうぞ","url":"https://booth.pm/ja/items/1169142","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f3e21dbb-3a98-47e6-aaba-233f59ae5751/i/1169142/6de1e5f6-e7e8-4c1b-a43a-67fbfd0deeda_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4xfY03/YEPcbUaSbL2BUjTbg/EsnUT1P3zetjLIvstY="></script>
+    nonce="cwz2zKQqMymaZE53KyoSdqrFMBXdFaNlDbe659wr1/I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -370,9 +370,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
