--- a/VRChat/77/1168477.html
+++ b/VRChat/77/1168477.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "CoCPVDz2kWOeIqWro8eheIM3R93MOEIRNb2k9yefDpQ="></script>
+    "16be3UjQpbPheTOzSsX7Cvrm7THjTl86c1MeRv5mbuY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「Add_your_name」【VRMあり】+イラスト集「SPECIFICATION」DL版","description":"【お知らせ】\n※2019/4/1\n販売を終了しました。\nたくさんのお迎え、ありがとうございました。\n不具合修正、アップデートは今後も可能な限り対応予定です。\n\n※2019/3/7\n大幅修正版アップロードしました。お手数ですが再度DLください。\n\nオリジナル3Dモデル「Add_your_name」(通称アド子ちゃん)\n制作者：azisake、Osd\n\nOriginal 3D model \"Add_your_name\" (commonly called Addko-chan)\n3D modeling:azisake\nCharacter design:Osd\nYou can use it in games such as VRChat.\n\nモデル説明下部に利用規約がございます。\nご了承のうえダウンロードください。\n\nイラスト・設定資料集のみの販売はこちら（3/31を過ぎても購入できます）\nhttps://ferrumshop.booth.pm/items/1157139\n\nリアルブック、アクキーも出ました！\n※こちらも3月末をもって受注を終了しました。ありがとうございました。\n\nVRoidHubで確認できます（旧版）\nhttps://hub.vroid.com/characters/1408320084530730621/models/7110659680680788681\n","url":"https://booth.pm/ja/items/1168477","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"2500","highPrice":"3500"},"image":"https://booth.pximg.net/c/620x620/43dc8ef5-e02b-410c-8408-571e1dbcd041/i/1168477/1e6defee-2800-465d-97b5-a3ed53435664_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CoCPVDz2kWOeIqWro8eheIM3R93MOEIRNb2k9yefDpQ="></script>
+    nonce="16be3UjQpbPheTOzSsX7Cvrm7THjTl86c1MeRv5mbuY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -551,9 +551,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
