--- a/VRChat/87/1168687.html
+++ b/VRChat/87/1168687.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "bTMDNvH1ITq7OrHM54lDm6bbT4Icd5b3Mry1ugwgG6Y="></script>
+    "s8loiR4J7zLFAtcVagjD8MdLemvnskKIofLfIWzvvIU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"動く缶バッジテンプレート","description":"◇動く缶バッジが簡単に作れるテンプレートです◇\n\nサンプル\nhttps://twitter.com/lept_on/status/1080841919226245126\n\nいろいろなチームロゴなどをアバターにつけたいあたなへ\n一味違った缶バッジが簡単に作れます！\n\n背景、文字、ロゴを別レイヤーとして表示し、文字を回転させることができるオリジナルのshaderが入っています。\n\n文字は横一列に並んだテクスチャを用意するだけでOK！\nshaderで円形に変換します。\n\n\n◇用意するもの\n・透過処理したロゴ\n・透過処理したロゴの周りや後ろに回したい文字や模様\n・好きな背景（単色の場合は不要）\n\n\n-内容-\n・KanBadge.unitypackage\n・Kan Badge Shader使い方\n・利用規約\n\n\n-利用規約-\n\n○ 禁止事項\n\n◇モデルのメッシュ及びテクスチャ及びshaderに関して\n\n・データの全部又は一部を流用して作成したものの配布・販売等 (二次配布)\n・本データの製作者を名乗る・偽る行為\n\n以上の行為を禁止します。\n\n\n○ 利用に関して\n\n◇本データ全体に関して\n・本データを利用したことにより発生したあらゆる不具合・損失・トラブルに対し、製作者は一切の責任を負いません。","url":"https://booth.pm/ja/items/1168687","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/408b6933-3b28-43c3-ad6b-bcf87be77732/i/1168687/2df5f988-0524-4dc0-84ff-c9b8a758481d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bTMDNvH1ITq7OrHM54lDm6bbT4Icd5b3Mry1ugwgG6Y="></script>
+    nonce="s8loiR4J7zLFAtcVagjD8MdLemvnskKIofLfIWzvvIU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -461,9 +461,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
