--- a/VRChat/97/1168197.html
+++ b/VRChat/97/1168197.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "sojtc2Y96oR/zmI6wVrUgJM9RqWxIq+Fprac8COYBI0="></script>
+    "P1SrwCRqO9XKa4EM8PLbambFyvXuH7XWVCHjdL0iVfY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向けオリジナル3Dモデル『トモダチ』","description":"VRC向けのオリジナルアバターです。\nDynamicBoneとYMatShader2に対応しています。\n\n\n※予めUnityプロジェクトにVRCSDK、及びDynamicBone(任意)をインポートした状態でunitypackageをインポート、フォルダ階層内のassetsにある「tomodachi」をHierarchyにドラッグ＆ドロップするとアップロードできる状態でセットアップされます。\n\n※YMatShader2は同梱させて頂いていますのでインポートしていただく必要はございません。\n\n※改変用に各種データを同梱させていますが、無改変で使う場合はunitypackage以外は使用しません。\n\nVRCSDK\n→　https://www.vrchat.net/home/download\n\nYMatShader2\n→　https://booth.pm/ja/items/1060579\n金属表現やノーマルマップの表現に非常に優れたシェーダーなのでぜひぜひ使ってみていただきたいおすすめのシェーダーです。\n\nDynamicBone\n→　https://assetstore.unity.com/packages/tools/animation/dynamic-bone-16743\n\n\nポリゴン数：△24817\nオブジェクト、マテリアル数：1\n\n\n\n本データはVRCでの利用を想定しております。\n本データを利用したことによって生じるいかなる損害に対しても当方は一切責任を負いません。\n以下の規約に従った上で、ご自由にお使いください。\n\n◆禁止事項\n・本データ、あるいは本データを基にした改変物を取り出せる状態での再配布は行わないでください。\n・自作発言等、作者を偽る発言はおやめください。\n\n◆やってもいいことの一例\n・データの改変\n・営利利用\n・映像制作\n・動画配信\n・このページのURLとモデル名をクレジットとして記載した上でのこのモデルを使用したバーチャルYouTuber活動やそれに類する活動を許可します。\n\n◆補足\n本規約における再配布の定義の中にVRCへのデータのアップロードは含まれておりません。ただし、アバターペデスタルへの利用、およびVRCへのパブリック状態でのアップデートでの使用は禁止します。","url":"https://booth.pm/ja/items/1168197","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/96ef0fd4-a352-46e3-8f16-59deaadb4c5a/i/1168197/04562a71-a0b5-44f2-853a-9e406035950c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sojtc2Y96oR/zmI6wVrUgJM9RqWxIq+Fprac8COYBI0="></script>
+    nonce="P1SrwCRqO9XKa4EM8PLbambFyvXuH7XWVCHjdL0iVfY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -392,9 +392,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
