--- a/VRChat/40/1167540.html
+++ b/VRChat/40/1167540.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "VVzovYCJiHTNeB8i0ohQ6lPn6XImEQxd3QNJ6XKDISs="></script>
+    "mv/z2kr8dd/gIjQmoSu8b1ddVlnvoJnb9wzny3K9Ocg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"氷の結晶ヘアピン","description":"「氷の結晶ヘアピン(VRChat想定）」をダウンロードいただきありがとうございます。\n内容については以下のとおりになっております。\n\n【ポリゴン数・テクスチャ】\n・氷の結晶ヘアピン　△1876\n\n【内容物】\n・氷結晶ヘアピン.unitypackage\n・Readme.txt\n\n\n【利用規約】\n▲CC0で著作権を放棄し、パブリックドメインに提供します。ご自由にお使いください。\nhttps://creativecommons.org/publicdomain/zero/1.0/deed.ja\n\n・クレジット記載不要、商業利用可\n\n・このモデルの作成者を騙ることの禁止\n\n・当モデルを使用して発生したトラブルに一切の責任を作成者は負いません。\n\n――――――――――――――――――――――――――――――――――――――\n\n▲制作者の連絡先\n　ご不明な点があれば、ご連絡ください\n\n制作者：れみーと\n\nTwitter : @remiiiiiiit\n\n――――――――――――――――――――――――――――――――――――――\n","url":"https://booth.pm/ja/items/1167540","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/00dca8ed-9814-4b4e-bd26-029d6809f5ee/i/1167540/ede2ecc2-ead2-4f5a-9504-92693d939c8f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VVzovYCJiHTNeB8i0ohQ6lPn6XImEQxd3QNJ6XKDISs="></script>
+    nonce="mv/z2kr8dd/gIjQmoSu8b1ddVlnvoJnb9wzny3K9Ocg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -384,9 +384,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
