--- a/VRChat/38/1166738.html
+++ b/VRChat/38/1166738.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "yvgfnBvu46sZZ+TTfZqCI7ylRvbBpuICw3Aio/Xw2LY="></script>
+    "Pj5y5NBzzlCRVmUXpiWbLMcj3vSeslOnRrNjwWQX7RY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】ウォーパルド印の「テーブル筐体」","description":"～更新～\n・今更ですがお布施用の項目を作りました。（内容は同じです。）\n\n\n・コントロールパネルを増やしたりマイナーチェンジするため、このバージョンは無料になります！お試しにどうぞ！！！\n\n・Unityパッケージを用意しました！！\nPrefabを置くだけでそれっぽくいけます。\nテクスチャ画像差し替えで簡単に画面を映せます！！\n\n\n古いゲームセンターなどにおいてあるであろう一般的な形のテーブル筐体です。\nVRCHATを想定としておりますが、自由に使って構いません。\nワールド置くだけで周りの空気感が一変すると思います。\n\n\nウォーパルド印の「テーブル筐体」\n\n\n・テーブル筐体.fbx\n\n・モニター画面.png（モニター用のテクスチャ。映したいものを黒い枠内に入れてください。\n\n・テーブルガラス.png（テーブル用のテクスチャ。「ガラス部」マテリアルを差し替えることによってインストラクションボードなどを置くことが可能です。\n\n・りーどみー.txt\n\n～使用方法～\n\nfbxファイルをUnityやBlenderなど各種ソフトにインポートしてご利用下さい。\n\n「透過ガラス部」マテリアルを透過させることによってよりリアルな筐体になります。\n\n\n～利用規約～\nデータのみの再配布を禁じます\n(自作モデルに組み込む等は可)\n\n改変、動画、同人、移植、商用、配信等自由です。\n","url":"https://booth.pm/ja/items/1166738","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/68ed4d6d-87a6-44fe-a992-b3aec5be9769/i/1166738/f3513cde-4d32-4383-bee8-7338a3693982_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yvgfnBvu46sZZ+TTfZqCI7ylRvbBpuICw3Aio/Xw2LY="></script>
+    nonce="Pj5y5NBzzlCRVmUXpiWbLMcj3vSeslOnRrNjwWQX7RY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -511,9 +511,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
