--- a/VRChat/70/1163570.html
+++ b/VRChat/70/1163570.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "cXUW7af3DBBHWRwuN6FabvSfH98EpxWF4EZ10LEWNGw="></script>
+    "hffyKhFTrBm6u4CN/5ODs9YeA5wfIZfiDBhBGSYrvw4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　『エルギット(Ergit)』V2.1","description":"VRChatでの使用を想定したオリジナル3Dモデルの「エルギット」です。\nケモノな男の子で元気溌剌なイメージで作りました。\n\n※V2以前のバージョンをお持ちの方は無料でV2をご利用できます。\n\n◇利用規約◇\n\n対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。\n\nただし下記を禁止します。\n・他人が利用できるようにし、著作者の販売を阻害すること。\n・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。\n\nその他\n・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。\n・利用権利は他人に譲渡することができません。\n\nこのライセンスにおける解説情報は下記になります。\nhttps://gitlab.com/towelfunnelvrc/towel-license/wikis/\n（タオルライセンス 販売用 version0.9）\n\n\n◇unitypackage導入前に◇\n\n・VRCSDK、Arktoon-Shaders、DynamicBone(任意)をImportしたうえでImportすること\n\n\n◇内容物◇\n\n・Ergit_V2.unitypackage\n┃\n┣・AvatarScene　――　DynamicBoneやVRChatアップロード用セットアップ済みモデルを配置したSceneファイル\n┃\n┣・Modelsフォルダ\n┃┃\n┃┣・Ergit_V2.fbx　――　通常の3Dモデルファイル\n┃┃\n┃┗・Ergit_V2_Parting.fbx　――　素体以外が別オブジェクトになっている3Dモデルファイル\n┃\n┣・Animationsフォルダ　――　AnimationOverride用のAnimation\n┃\n┣・Materialsフォルダ　――　Material\n┃\n┗・Texturesフォルダ　――　Texture\n\n・Body.psd　――　レイヤー分けしたテクスチャデータ\n\n\n◇更新履歴\n\n　2020/06/03 V2.1\n　　・Unity2018対応\n　　・ウェイトを修正/調整\n　　・メインテクスチャを調整\n　　・マテリアルを調整\n　　・メタリックマップを追加\n　　・？？？にボーンを追加\n","url":"https://booth.pm/ja/items/1163570","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/55436e44-501d-4291-845c-dfdc38187de1_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cXUW7af3DBBHWRwuN6FabvSfH98EpxWF4EZ10LEWNGw="></script>
+    nonce="hffyKhFTrBm6u4CN/5ODs9YeA5wfIZfiDBhBGSYrvw4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -182,7 +182,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      130
+                                      129
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -198,7 +198,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      130
+                                      129
                                     </div>
                                   </div></a>
                                 </div>
@@ -486,9 +486,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
