--- a/VRChat/70/1155170.html
+++ b/VRChat/70/1155170.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "wqmPCCUaqTd5wrEh3jCvvjRKHiokVl+g9Ra0eZziDSQ="></script>
+    "pxIlkl/dufJu7ubXti4W9v12FZ8IKyHpfj8Yt1jsv1I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRM\u0026Unitypackage]鳥獣人物戯画","description":"――なんで売ることになったのか、よくわからない――\n\nバーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！\n許可範囲内での営利利用も可能です。","url":"https://booth.pm/ja/items/1155170","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"800"},"image":"https://booth.pximg.net/c/620x620/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/1155170/526f527b-b474-45b4-b1b8-68fad4ba8260_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wqmPCCUaqTd5wrEh3jCvvjRKHiokVl+g9Ra0eZziDSQ="></script>
+    nonce="pxIlkl/dufJu7ubXti4W9v12FZ8IKyHpfj8Yt1jsv1I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -716,9 +716,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
